Added settings for locked landscape mode.

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">YogaBook设置</string>
+    <string name="app_name">Yoga Book设置</string>
     <string name="keyboard_tile_name">键盘</string>
     <string name="keyboard_bound_message">水墨键盘已启用。</string>
     <string name="keyboard_unbound_message">水墨键盘已禁用。</string>
+    <string name="custom_orientation_tile_name">默认模式</string>
+    <string name="custom_orientation_laptop_mode">笔电模式</string>
+    <string name="system_overlay_permission_hint">请先允许应用可以显示在其它应用的上层。</string>
 </resources>
